--- a/sailfish/rpm/harbour-gagbook.yaml
+++ b/sailfish/rpm/harbour-gagbook.yaml
@@ -1,33 +1,36 @@
 Name: harbour-gagbook
-Summary: An unofficial app for 9GAG website
-Version: 1.2.3
+Summary: An unofficial app for the 9GAG website
+Version: 1.3.0
 Release: 1
-Group: Applications/Internet
-URL: https://github.com/llelectronics/GagBook
+Group: Qt/Qt
+URL: https://github.com/Alex217/GagBook
 License: BSD
 Sources:
 - '%{name}-%{version}.tar.bz2'
 Description: |
-  GagBook is an unofficial mobile app for 9GAG website that allows you to view posts from 9GAG easily with a simple, smooth and native user interface.
+  GagBook is an unofficial mobile app for the 9GAG website that allows you to easily view posts from 9GAG with a simple, smooth and native user interface.
 Configure: none
 Builder: qtc5
+
 QMakeOptions:
 - VERSION='%{version}-%{release}'
+
 PkgConfigBR:
+- sailfishapp #>= 1.0.2
 - Qt5Core
 - Qt5Qml
 - Qt5Quick
 - Qt5Network
 - Qt5Widgets # not officially supported!
 - Qt5WebKitWidgets # not officially supported!
-- sailfishapp
 - qdeclarative5-boostable
 - libresourceqt5 # not officially supported yet!
 
 Requires:
-- sailfishsilica-qt5
+- sailfishsilica-qt5 #>= 0.10.9
 #- mapplauncherd-booster-silica-qt5
 - qt5-plugin-imageformat-gif
+
 Files:
 - '%{_bindir}'
 - '%{_datadir}/%{name}'
