--- a/sailfish/rpm/harbour-gagbook.yaml
+++ b/sailfish/rpm/harbour-gagbook.yaml
@@ -1,38 +1,51 @@
 Name: harbour-gagbook
-Summary: An unofficial app for the 9GAG website
-Version: 1.3.2
+Summary: An unofficial client for the 9GAG.com website
+Version: 1.3.3
 Release: 1
-Group: Qt/Qt
+# The contents of the Group field should be one of the groups listed here:
+# https://gitorious.org/meego-developer-tools/spectacle/blobs/master/data/GROUPS?p=meego-developer-tools:spectacle.git;a=blob_plain;f=data/GROUPS;hb=HEAD
+Group: Amusements/Graphics
 URL: https://github.com/Alex217/GagBook
 License: BSD
+# This must be generated before uploading a package to a remote build service.
+# Usually this line does not need to be modified.
 Sources:
-- '%{name}-%{version}.tar.bz2'
+  - '%{name}-%{version}.tar.bz2'
 Description: |
-  GagBook is an unofficial mobile app for the 9GAG website that allows you to easily view posts from 9GAG with a simple, smooth and native user interface.
+  GagBook is an unofficial client for the 9GAG.com website that allows you to easily view 9GAG posts with a simple, smooth and native user interface.
 Configure: none
+# The qtc5 builder inserts macros to allow QtCreator to have fine
+# control over qmake/make execution
 Builder: qtc5
 
 QMakeOptions:
-- VERSION='%{version}-%{release}'
+  - VERSION='%{version}-%{release}'
 
+# This section specifies build dependencies that are resolved using pkgconfig.
+# This is the preferred way of specifying build dependencies for your package.
 PkgConfigBR:
-- sailfishapp #>= 1.0.2
-- Qt5Core
-- Qt5Qml
-- Qt5Quick
-- Qt5Network
-- Qt5Widgets # not officially supported!
-- Qt5WebKitWidgets # not officially supported!
-- qdeclarative5-boostable
-- libresourceqt5 # not officially supported yet!
+  - sailfishapp #>= 1.0.2
+  - Qt5Core
+  - Qt5Qml
+  - Qt5Quick
+  - Qt5Network
+  - Qt5Widgets # not officially supported!
+  - Qt5WebKitWidgets # not officially supported!
+  - qdeclarative5-boostable
+  - libresourceqt5 # not officially supported yet!
 
+# Runtime dependencies which are not automatically detected
 Requires:
-- sailfishsilica-qt5 #>= 0.10.9
-#- mapplauncherd-booster-silica-qt5
-- qt5-plugin-imageformat-gif
+  - sailfishsilica-qt5 #>= 0.10.9
+#  - mapplauncherd-booster-silica-qt5
+  - qt5-plugin-imageformat-gif
 
+# All installed files
 Files:
-- '%{_bindir}'
-- '%{_datadir}/%{name}'
-- '%{_datadir}/applications/%{name}.desktop'
-- '%{_datadir}/icons/hicolor/86x86/apps/%{name}.png'
+  - '%{_bindir}'
+  - '%{_datadir}/%{name}'
+  - '%{_datadir}/applications/%{name}.desktop'
+  - '%{_datadir}/icons/hicolor/86x86/apps/%{name}.png'
+
+# For more information about yaml and what's supported in Sailfish OS
+# build system, please see https://wiki.merproject.org/wiki/Spectacle
